#Proyecto Para Ver por Netlify

--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -2,11 +2,11 @@
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
-  { href: '/about', label: 'About us' },
-  { href: '/#services', label: 'Services' },
-  { href: '/#cases', label: 'Use Cases' },
-  { href: '/pricing', label: 'Pricing' },
-  { href: '/articles', label: 'Blog'},
+  { href: '/about', label: 'Sobre Nosotros' },
+  { href: '/#services', label: 'Servicios' },
+  { href: '/#cases', label: 'Logrado' },
+  { href: '/pricing', label: 'Precios' },
+  { href: '/articles', label: 'Contactanos'},
 ];
 
 const navButton = { href: 'https://github.com/manulthanura/Positivus', label: 'Request a quote' };
