--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,16 +8,15 @@ import HeroIlust from "../../assets/pics/hero.svg";
 <div class="relative flex flex-col-reverse items-center md:flex-row" id="hero">
     <div class="row items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
         <div class="text-left space-y-3">
-            <h1 class="text-4xl font-medium leading-none md:text-6xl text-center md:text-left">Navigating the <br> digital landscape <br> for success</h1>
-            <p class="mt-6 mb-8 text-lg font-normal leading-7 sm:mb-12 text-center md:text-left md:pr-12">Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
+            <h1 class="text-4xl font-medium leading-none md:text-6xl text-center md:text-left">Descubre la nueva colección <br> de zapatillas Nike</h1>
+            <p class="mt-6 mb-8 text-lg font-normal leading-7 sm:mb-12 text-center md:text-left md:pr-12">Eleva tu estilo y rendimiento con las últimas innovaciones en zapatillas Nike. Perfectas tanto para el deporte como para el uso diario.</p>
             <div class="w-full justify-center md:justify-start items-center inline-flex">
-                <a href="https://github.com/manulthanura/Positivus" target="_blank" class="px-8 py-5 bg-zinc-900 hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7">Book a consultation
-                </a>
+                <a href="https://nike.com" target="_blank" class="px-8 py-5 bg-zinc-900 hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7">Compra ahora</a>
             </div>
         </div>
     </div>
     <div class="flex items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
-        <Image src={HeroIlust} alt="Hero Ilustration" loading="eager" />
+        <Image src={HeroIlust} alt="Zapatillas Nike y Jordan en acción" loading="eager" />
     </div>
 </div>
 </Section>
