--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,12 +1,12 @@
 ---
 import Section from "./Section.astro";
 import { Image } from "astro:assets";
-import HeroIlust from "../../assets/pics/hero.svg";
+import HeroIlust from "../../assets/pics/banner.png";
 ---
 
 <Section id="home">
 <div class="relative flex flex-col-reverse items-center md:flex-row" id="hero">
-    <div class="row items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
+    <div class="row items-center py-5 md:w-6/12 md:pb-20 md:pt-10 md:mt-4">
         <div class="text-left space-y-3">
             <h1 class="text-4xl font-medium leading-none md:text-6xl text-center md:text-left">Descubre la nueva colección <br> de zapatillas Nike</h1>
             <p class="mt-6 mb-8 text-lg font-normal leading-7 sm:mb-12 text-center md:text-left md:pr-12">Eleva tu estilo y rendimiento con las últimas innovaciones en zapatillas Nike. Perfectas tanto para el deporte como para el uso diario.</p>
@@ -15,7 +15,7 @@ import HeroIlust from "../../assets/pics/hero.svg";
             </div>
         </div>
     </div>
-    <div class="flex items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
+    <div class="flex items-center py-5 md:w-9/12 md:pb-20 md:pt-10">
         <Image src={HeroIlust} alt="Zapatillas Nike y Jordan en acción" loading="eager" />
     </div>
 </div>
