--- a/src/components/sections/Sponsors.astro
+++ b/src/components/sections/Sponsors.astro
@@ -1,20 +1,18 @@
 ---
 import { Image } from "astro:assets";
-import s1 from "../../assets/company/company-logo1.svg";
-import s2 from "../../assets/company/company-logo2.svg";
-import s3 from "../../assets/company/company-logo3.svg";
-import s4 from "../../assets/company/company-logo4.svg";
-import s5 from "../../assets/company/company-logo5.svg";
-import s6 from "../../assets/company/company-logo6.svg";
+import s1 from "../../assets/company/nike.png";
+import s2 from "../../assets/company/jordan.svg";
 import Section from "./Section.astro";
 
 const sponsors = [
-  { logo: s6, alt: "Amazon logo" },
-  { logo: s5, alt: "Dribble logo" },
-  { logo: s4, alt: "HubSpot logo" },
-  { logo: s3, alt: "Notion logo" },
-  { logo: s2, alt: "Netflix logo" },
-  { logo: s1, alt: "Zoom logo" },
+  { logo: s1, alt: "nike logo" },
+  { logo: s2, alt: "jordan logo" },
+  { logo: s1, alt: "nike logo" },
+  { logo: s2, alt: "jordan logo" },
+  { logo: s1, alt: "nike logo" },
+  { logo: s2, alt: "jordan logo" },
+
+
 ];
 ---
 
@@ -25,7 +23,7 @@ const sponsors = [
       sponsors.map((sponsor) => {
         return (
           <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-            <Image src={sponsor.logo} class="h-12 w-auto mx-auto" alt={sponsor.alt} loading="lazy" />
+            <Image src={sponsor.logo} class="h-24 w-auto mx-auto" alt={sponsor.alt} loading="lazy" />
           </div>
         );
       })
