--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -4,11 +4,11 @@ import SectionTitle from "../ui/SectionTitle.astro";
 import Section from "./Section.astro";
 ---
 
-<Section id="contact">
+<Section id="contact" >
   <div class="mb-[140px] relative">
     <SectionTitle
-      sectionTitle="Contact Us"
-      description="Connect with Us: Let's Discuss Your Digital Marketing Needs"
+      sectionTitle="Contáctanos"
+      description="Para realizar una compra exclusiva o mayorista, contáctanos mediante este formulario."
     />
     <Form />
   </div>
