--- a/src/components/sections/Sponsors.astro
+++ b/src/components/sections/Sponsors.astro
@@ -22,8 +22,8 @@ const sponsors = [
     {
       sponsors.map((sponsor) => {
         return (
-          <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-            <Image src={sponsor.logo} class="h-24 w-auto mx-auto" alt={sponsor.alt} loading="lazy" />
+          <div class=" grayscale transition duration-200 hover:grayscale-0">
+            <Image src={sponsor.logo} class="h-20 lg:h-24 w-auto mx-auto mb-0" alt={sponsor.alt} loading="lazy" />
           </div>
         );
       })
