--- a/src/components/ui/ShortForm.astro
+++ b/src/components/ui/ShortForm.astro
@@ -10,7 +10,8 @@
       class="bg-transparent w-full px-[35px] py-5 border rounded-[14px] focus:outline-none"
     />
   </div>
-  <button type="submit" name="submit" class="w-full sm:w-[45%] btn-tertiary"
-    >Subscribe to news</button
-  >
+  <button type="submit" name="submit" class="w-full sm:w-[45%] btn-tertiary bg-red-600 text-white">
+    Suscribete para Obtener Promociones
+  </button>
+  
 </form>
