--- a/src/components/sections/Process.astro
+++ b/src/components/sections/Process.astro
@@ -7,7 +7,7 @@ const description = "Step-by-Step Guide to Achieving Your Business Goals";
 ---
 
 <Section id="process">
-  <div class="mt-[140px]">
+  <div class="md-mt-[150px] mt-[70px]">
     <SectionTitle
       sectionTitle="Trabajo en proceso"
       description={description}
