--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -15,7 +15,7 @@ import decorForm from "../../assets/pics/contact-pic.png";
           name="checkbox1"
           class="form-checkbox text-black"
         />
-        <label for="checkbox1" class="text-black">Say Hi</label>
+        <label for="checkbox1" class="text-black">Di Hola</label>
       </div>
       <div class="flex items-center gap-[14px]">
         <input
@@ -24,45 +24,45 @@ import decorForm from "../../assets/pics/contact-pic.png";
           name="checkbox2"
           class="form-checkbox text-black"
         />
-        <label for="checkbox2" class="flex items-center text-black"
-          >Get a Quote</label
-        >
+        <label for="checkbox2" class="flex items-center text-black">
+          Obtener una Cotización
+        </label>
       </div>
     </div>
 
     <div class="mb-4">
-      <label for="name" class="block text-black mb-2">Name*</label>
+      <label for="name" class="block text-black mb-2">Nombre*</label>
       <input
         type="text"
         id="name"
         name="name"
-        placeholder="Name"
+        placeholder="Nombre"
         class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       />
     </div>
 
     <div class="mb-4">
-      <label for="email" class="block text-black mb-2">Email*</label>
+      <label for="email" class="block text-black mb-2">Correo Electrónico*</label>
       <input
         type="email"
         id="email"
         name="email"
-        placeholder="Email"
+        placeholder="Correo Electrónico"
         class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       />
     </div>
 
     <div class="mb-4">
-      <label for="message" class="block text-black mb-2">Message*</label>
+      <label for="message" class="block text-black mb-2">Mensaje*</label>
       <textarea
         id="message"
         name="message"
-        placeholder="Message"
+        placeholder="Mensaje"
         class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       ></textarea>
     </div>
 
-    <button type="submit" name="submit" class="btn-primary w-full">Send</button>
+    <button type="submit" name="submit" class="btn-primary w-full">Enviar</button>
   </form>
   <picture class="absolute right-[-25%] top-[2%] bottom-[2%] hidden lg:block">
     <Image src={decorForm} alt="decor" />
@@ -110,8 +110,8 @@ import decorForm from "../../assets/pics/contact-pic.png";
       cb2.addEventListener("change", function () {
         if (cb2.checked) {
           cb1.checked = false;
-          message.value =
-            "We're interested in your services! Please contact us";
+            message.value =
+            "¡Estamos interesados en sus productos!";
         } else {
           message.value = "";
           cb1.checked = true;
@@ -124,7 +124,7 @@ import decorForm from "../../assets/pics/contact-pic.png";
         } else {
           cb2.checked = true;
           message.value =
-            "We're interested in your services! Please contact us";
+          " ¡Estamos interesados en sus productos!";
         }
       });
     }
