--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -8,7 +8,7 @@ import Section from "./Section.astro";
   <div class="mb-[140px] relative">
     <SectionTitle
       sectionTitle="Contáctanos"
-      description="Para realizar una compra exclusiva o mayorista, contáctanos mediante este formulario."
+      description="Para realizar una compra, contáctanos mediante este formulario."
     />
     <Form />
   </div>
