--- a/src/components/ui/Accordion.astro
+++ b/src/components/ui/Accordion.astro
@@ -4,14 +4,15 @@ import AccordionItem from "./AccordionItem.astro";
 const content = [
 {
   index: 1,
-  title: "Consultation",
-  description: "During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements."
+  title: "Nuestro Camino",
+  description: "Hemos recorrido un largo camino para llegar a donde estamos hoy. Todo lo que hacemos lo realizamos con pasión y entrega, aprendiendo de cada experiencia y esforzándonos siempre por mejorar. Cada paso es un testimonio del amor y compromiso que ponemos en nuestro trabajo."
 },
 {
   index: 2,
-  title: "Research",
-  description: "After the consultation, we will conduct thorough research to identify your target audience, competitors, and industry trends. This will help us develop a comprehensive strategy to achieve your business goals."
+  title: "Nuestro Camino",
+  description: "Hemos recorrido un largo camino para llegar a donde estamos hoy. Todo lo que hacemos lo realizamos con pasión y entrega, aprendiendo de cada experiencia y esforzándonos siempre por mejorar. Cada paso es un testimonio del amor y compromiso que ponemos en nuestro trabajo."
 },
+
 
 ];
 ---
