--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -4,8 +4,8 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   { href: '/about', label: 'Sobre Nosotros' },
   { href: '/#services', label: 'Productos' },
-  { href: '/#cases', label: 'Logrado' },
-  { href: '/pricing', label: 'Precios' },
+  { href: '/#', label: 'Logrado' },
+  { href: '/#', label: 'Precios' },
   { href: '/articles', label: 'Contactanos'},
 ];
 
