--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ import Services from "../components/sections/Services.astro";
                         <p class="mt-6 mb-8 text-xl font-normal leading-7 sm:mb-12">
                           Somos una tienda de zapatillas G5, donde encontrarás lo último en tendencias y calidad para llevar tu estilo al siguiente nivel.
                         </p>
-                        <a class="px-9 py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-2xl justify-items-center md:justify-items-start gap-2.5 inline-flex" rel="noopener noreferrer" href="https://github.com/manulthanura/Positivus" target="_blank">
+                        <a class="px-9 py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-2xl justify-items-center md:justify-items-start gap-2.5 inline-flex" rel="noopener noreferrer" href="#services" target="_blank">
                             <h2 class="text-center text-xl font-normal leading-7">Explora nuestra colección</h2>
                         </a>
                     </div>
