--- a/src/components/sections/Process.astro
+++ b/src/components/sections/Process.astro
@@ -3,7 +3,7 @@ import Accordion from "../ui/Accordion.astro";
 import SectionTitle from "../ui/SectionTitle.astro";
 import Section from "./Section.astro";
 
-const description = "Step-by-Step Guide to Achieving Your Business Goals";
+const description = "Revisa nuestro proceso. Descubre cómo trabajamos para ofrecer la mejor experiencia a nuestros clientes, siguiendo cada paso de nuestro compromiso con la calidad y la innovación.";
 ---
 
 <Section id="process">
