--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 import ArticleCard from "../../components/ui/ArticleCard.astro";
 import SearchForm from "../../components/ui/SearchForm.astro";
+import Contact from "../../components//sections/Contact.astro";
 import { getCollection } from 'astro:content';
 import type { CollectionEntry } from "astro:content";
 
@@ -16,16 +17,12 @@ const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection('blog'))
 	<main class="space-y-20">
             <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-3">
                 <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
-                    <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold">Our Blog</h2>
-                    <p class="font-light sm:text-xl">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
-                </div> 
+                    <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold">Escribenos!!..</h2>
+                    <p class="font-light sm:text-xl">Ofertas y Promociones exlusivas.</p>
+                </div>
                 <br>
-                <SearchForm />
-                <br>
-                <div class="grid gap-8 lg:grid-cols-2">
-                    {allBlogArticles.map(article => (
-                        <ArticleCard article={article} />
-                    ))}
+                <div class="grid gap-8 lg:grid-cols-1">
+                    <Contact />
                 </div>  
             </div>
 	</main>
